# ping_game

./: pyproject.toml
src/ping_game/: ping.py  pong.py
